--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ibnudirsan/bwa-auth",
+    "name": "rumahdev/bwa-auth",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": [
